--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,10 @@
 @import '/node_modules/@fortawesome/fontawesome-free/css/all.min.css';
 
 .logo {
-    background: rgb(0, 129, 154);
-    background: linear-gradient(150deg, rgba(0, 129, 154, 1) 22%, rgba(3, 218, 246, 1) 49%, rgba(0, 255, 194, 1) 78%);
+    color: rgb(0, 129, 154);
+    color: linear-gradient(150deg, rgba(0, 129, 154, 1) 22%, rgba(3, 218, 246, 1) 49%, rgba(0, 255, 194, 1) 78%);
+}
+
+.z {
+    background-color: red;
 }
