--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,11 +1,84 @@
 @import '~bootstrap/scss/bootstrap';
 @import '/node_modules/@fortawesome/fontawesome-free/css/all.min.css';
 
-.logo {
-    color: rgb(0, 129, 154);
-    color: linear-gradient(150deg, rgba(0, 129, 154, 1) 22%, rgba(3, 218, 246, 1) 49%, rgba(0, 255, 194, 1) 78%);
+// GENERALS
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.z {
-    background-color: red;
+.btn-color {
+    background-color: #ba9593;
+    border-color: #ba9593;
+}
+
+// HEADER
+
+.logo {
+    color: #EDFFAB;
+}
+
+.link-hover-header {
+    color: #C8FFBE;
+}
+
+.link-hover-header:hover {
+    // background-color: #DFBE99;
+    background-color: #EDFFAB;
+}
+
+.nav-background {
+    background-color: #89608E;
+}
+
+.drop-down:hover {
+    background-color: rgb(206, 227, 245);
+}
+
+// Jumbotron welcom.blade.php
+.jumbotron-welcome-base {
+    background-color: #ba9593;
+    height: calc(100vh - 120px);
+}
+
+.jumbotron-welcome-partial {
+    background-color: #C8FFBE;
+    height: 35vh;
+}
+
+// ANIMATION CARDS
+
+.container-animation {
+    display: flex;
+    width: 100%;
+    padding: 4% 2%;
+    box-sizing: border-box;
+    height: 50vh;
+}
+
+.box {
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
+    line-height: 0;
+}
+
+.box>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .5s;
+}
+
+
+.box:hover {
+    flex: 1 1 50%;
+}
+
+.box:hover>img {
+    width: 100%;
+    height: 100%;
 }
