--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -60,7 +60,7 @@
 .box {
     flex: 1;
     overflow: hidden;
-    transition: .5s;
+    transition: 0.7s;
     margin: 0 2%;
     box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
     line-height: 0;
