--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,12 +11,77 @@
 .btn-color {
     background-color: #ba9593;
     border-color: #ba9593;
+    border: #ba9593 2px solid;
+}
+
+.btn-color:hover {
+    border: #ba9593 2px solid;
+
+}
+
+.btn-show {
+    background-color: white;
+    border: 2px solid #3C6E71;
+}
+
+.btn-show:hover {
+    background-color: #3C6E71;
+    border: 2px solid #3C6E71;
+    color: white;
+}
+
+
+.btn-modify {
+    background-color: white;
+    border: 2px solid #89608E;
+}
+
+.btn-modify:hover {
+    background-color: #89608E;
+    border: 2px solid #89608E;
+    color: white;
+}
+
+
+.btn-delete {
+    background-color: white;
+    border: 2px solid red;
+}
+
+
+.btn-delete:hover {
+    background-color: red;
+    color: white;
+    border: 2px solid red;
+}
+
+
+table {
+    width: 100%;
+
+}
+
+tr,
+td,
+th {
+    padding: 5px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.469);
+}
+
+tr:hover {
+    background-color: #EDFFAB;
 }
 
 // HEADER
 
 .logo {
     color: #EDFFAB;
+    transition: background-color 1s;
+}
+
+.logo:hover {
+    background-color: #edffab;
+    color: black;
 }
 
 .link-hover-header {
@@ -81,4 +146,28 @@
 .box:hover>img {
     width: 100%;
     height: 100%;
+}
+
+// SIDEBAR
+.background-color {
+    background-color: #c8ffbe;
+    padding-bottom: 65em;
+
+    padding-top: 0.5rem;
+    width: 210px;
+}
+
+.selected {
+    background-color: #edffab;
+}
+
+.select:hover {
+    background-color: yellow;
+}
+
+// YELD ADMIN.BLADE.PHP
+
+.main-width {
+    background-color: rgb(233, 232, 232);
+    width: calc(100% - 211px);
 }
