--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -185,3 +185,9 @@ tr:hover {
     margin-left: 210px;
     margin-top: 120px;
 }
+
+// main
+.description-card {
+    height: 150px;
+    width: 250px;
+}
