--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -196,3 +196,16 @@ tr:hover {
 .btn:disabled{
     background-color: rgb(142, 140, 140);
 }
+
+
+// LEAD MESSAGE STYLE
+
+.border-message{
+    border: 1px solid rgb(174, 168, 168);
+    border-radius: 10px;
+
+}
+.border-b{
+    border-bottom: 1px solid gray;
+}
+
