aggiunte modifiche style

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -203,9 +203,13 @@ tr:hover {
 .border-message{
     border: 1px solid rgb(174, 168, 168);
     border-radius: 10px;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
 
 }
 .border-b{
     border-bottom: 1px solid gray;
+}
+.ff{
+    overflow-y: auto;
 }
 
