major changes index.apartment style

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -245,3 +245,19 @@ p a:hover {
         width: 100%;
     }
 }
+
+.img-container {
+    width: 30%;
+
+    img {
+        width: 100%;
+    }
+}
+
+.img-container-index {
+    width: 50%;
+
+    img {
+        width: 100%;
+    }
+}
