--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -16,7 +16,6 @@
 
 .btn-color:hover {
     border: #ba9593 2px solid;
-
 }
 
 .btn-show {
@@ -30,7 +29,6 @@
     color: white;
 }
 
-
 .btn-modify {
     background-color: white;
     border: 2px solid #C5ADC5;
@@ -42,12 +40,10 @@
     color: white;
 }
 
-
 .btn-delete {
     background-color: white;
     border: 2px solid red;
 }
-
 
 .btn-delete:hover {
     background-color: red;
@@ -55,10 +51,8 @@
     border: 2px solid red;
 }
 
-
 table {
     width: 100%;
-
 }
 
 tr,
@@ -73,7 +67,6 @@ tr:hover {
 }
 
 // HEADER
-
 .logo {
     color: #000000;
     transition: background-color 1s;
@@ -89,7 +82,6 @@ tr:hover {
 }
 
 .link-hover-header:hover {
-    // background-color: #DFBE99;
     background-color: #B2B5E0;
 }
 
@@ -108,8 +100,6 @@ tr:hover {
     right: 0;
 }
 
-
-
 // Jumbotron welcom.blade.php
 .jumbotron-welcome-base {
     background-color: #ba9593;
@@ -122,7 +112,6 @@ tr:hover {
 }
 
 // ANIMATION CARDS
-
 .container-animation {
     display: flex;
     width: 100%;
@@ -150,7 +139,6 @@ tr:hover {
     object-fit: cover;
     transition: .5s;
 }
-
 
 .box:hover {
     flex: 1 1 50%;
@@ -183,7 +171,6 @@ tr:hover {
 }
 
 // YELD ADMIN.BLADE.PHP
-
 .main-width {
     width: calc(100% - 211px);
     margin-left: 210px;
@@ -196,19 +183,15 @@ tr:hover {
     width: 250px;
 }
 
-
 .btn:disabled {
     background-color: rgb(142, 140, 140);
 }
 
-
 // LEAD MESSAGE STYLE
-
 .border-message {
     border: 1px solid rgb(174, 168, 168);
     border-radius: 10px;
     box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
-
 }
 
 .border-b {
@@ -217,4 +200,19 @@ tr:hover {
 
 .ff {
     overflow-y: auto;
+}
+
+//LOADER
+.loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
