--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -16,7 +16,6 @@
 
 .btn-color:hover {
     border: #ba9593 2px solid;
-
 }
 
 .btn-show {
@@ -30,7 +29,6 @@
     color: white;
 }
 
-
 .btn-modify {
     background-color: white;
     border: 2px solid #C5ADC5;
@@ -42,19 +40,16 @@
     color: white;
 }
 
-
 .btn-delete {
     background-color: white;
     border: 2px solid red;
 }
-
 
 .btn-delete:hover {
     background-color: red;
     color: white;
     border: 2px solid red;
 }
-
 
 table {
     width: 100%;
@@ -73,7 +68,6 @@ tr:hover {
 }
 
 // HEADER
-
 .logo {
     color: #000000;
     transition: background-color 1s;
@@ -108,8 +102,6 @@ tr:hover {
     right: 0;
 }
 
-
-
 // Jumbotron welcom.blade.php
 .jumbotron-welcome-base {
     background-color: #ba9593;
@@ -122,7 +114,6 @@ tr:hover {
 }
 
 // ANIMATION CARDS
-
 .container-animation {
     display: flex;
     width: 100%;
@@ -150,7 +141,6 @@ tr:hover {
     object-fit: cover;
     transition: .5s;
 }
-
 
 .box:hover {
     flex: 1 1 50%;
@@ -183,7 +173,6 @@ tr:hover {
 }
 
 // YELD ADMIN.BLADE.PHP
-
 .main-width {
     width: calc(100% - 211px);
     margin-left: 210px;
@@ -196,19 +185,15 @@ tr:hover {
     width: 250px;
 }
 
-
 .btn:disabled {
     background-color: rgb(142, 140, 140);
 }
 
-
 // LEAD MESSAGE STYLE
-
 .border-message {
     border: 1px solid rgb(174, 168, 168);
     border-radius: 10px;
     box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
-
 }
 
 .border-b {
@@ -219,7 +204,7 @@ tr:hover {
     overflow-y: auto;
 }
 
-// PER IL FOOTER
+// INIZIO FOOTER
 p a:hover {
     text-decoration: underline;
 }
@@ -235,7 +220,6 @@ p a:hover {
 .footer-li a:hover {
     text-decoration: underline;
 }
-
 // FINE FOOTER
 
 .img-container {
