--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -155,7 +155,7 @@ tr:hover {
 
 // SIDEBAR
 .background-color {
-    background-color: #ffbc19;
+    background-color: #ffca4a;
     padding-bottom: 65em;
     position: fixed;
     top: 0;
@@ -213,7 +213,7 @@ p a:hover {
 }
 
 .jumbotron-footer {
-    background-color: #DCDCDC;
+    background-color: #ffca4a;
 }
 
 .footer-li a {
