[style] ripristinato hover

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -248,3 +248,25 @@ p a:hover {
         width: 100%;
     }
 }
+
+// SPONSORIZZAZIONI
+.bg-grey {
+    background-color: rgb(187, 187, 187);
+}
+
+.hvr {
+    transition: 0.5s;
+}
+
+.hvr:hover {
+    scale: 1.1;
+}
+
+.btn-sponsor {
+    color: black;
+}
+
+.pay-hover:hover {
+    background-color: rgb(175, 174, 174);
+    color: white;
+}
